--- a/index.html
+++ b/index.html
@@ -445,7 +445,7 @@
         // ! ! ! ВАЖНО ! ! !
         // ЗАМЕНИТЕ ЭТО НА HTTPS URL ВАШЕГО СЕРВЕРА (ОТ NGROK ИЛИ НАСТРОЕННЫЙ)
         // -----------------------------------------------------------------
-        const BACKEND_URL = 'https://ЗАМЕНИТЬ_НА_ВАШ_HTTPS_АДРЕС'; 
+        const BACKEND_URL = 'https://unelderly-maryland-lowly.ngrok-free.dev'; // <-- ВСТАВЛЕН ВАШ URL ИЗ СКРИНШОТА
         // -----------------------------------------------------------------
 
         const urlParams = new URLSearchParams(window.location.search);
