--- a/index.html
+++ b/index.html
@@ -458,7 +458,9 @@
         // -----------------------------------------------------------------
         const BACKEND_URL = 'https://unelderly-maryland-lowly.ngrok-free.dev'; // ЗАМЕНИТЕ_НА_ВАШ_HTTPS_АДРЕС
 
-        const GEMINI_API_KEY = "AIzaSyDo1fbHqoRxLqVxJkoRel58iG_bOvWLqnU"; // Замените на ваш ключ
+        // --- ИЗМЕНЕНИЕ: Вставлен ваш API ключ ---
+        const GEMINI_API_KEY = "AIzaSyDo1fbHqoRxLqVxJkoRel58iG_bOvWLqnU";
+        // ------------------------------------
         const MY_CUSTOM_PROMPT = "Анализируй ставки с точки зрения профессионального каппера. Будь краток, но убедителен.";
 
         let currentLang = 'ru';
