--- a/index.html
+++ b/index.html
@@ -451,12 +451,9 @@
         const tg = window.Telegram.WebApp;
         tg.expand();
 
-        // -----------------------------------------------------------------
-        // ! ! ! ВАЖНО ! ! !
-        // УКАЖИТЕ ЗДЕСЬ HTTPS АДРЕС NGROK (ИЛИ ВАШЕГО СЕРВЕРА С HTTPS)
-        // Пример: 'https://random123.ngrok-free.app'
-        // -----------------------------------------------------------------
-        const BACKEND_URL = 'https://unelderly-maryland-lowly.ngrok-free.dev'; // ЗАМЕНИТЕ_НА_ВАШ_HTTPS_АДРЕС
+        // --- ИЗМЕНЕНИЕ: Установлен новый субдомен ---
+        const BACKEND_URL = 'https://wergune.duckdns.org';
+        // ------------------------------------------
 
         // --- ИЗМЕНЕНИЕ: Вставлен ваш API ключ ---
         const GEMINI_API_KEY = "AIzaSyDo1fbHqoRxLqVxJkoRel58iG_bOvWLqnU";
