--- a/index.html
+++ b/index.html
@@ -447,7 +447,7 @@
     <div id="customAlert" class="custom-alert hidden"></div>
 
     <script src="https://telegram.org/js/telegram-web-app.js"></script>
-    <script>
+<script>
         const tg = window.Telegram.WebApp;
         tg.expand();
 
@@ -465,6 +465,8 @@
         let totalAttempts = 10;
         let isAnalyzing = false;
         let userId = null;
+        // --- НОВАЯ ПЕРЕМЕННАЯ: для хранения имени текущего партнера ---
+        let currentPartner = null;
 
         const translations = {
             'ru': {
@@ -892,7 +894,7 @@ ${MY_CUSTOM_PROMPT ? `Additional instruction: "${MY_CUSTOM_PROMPT}".` : ''}
             resultsContainer.classList.remove('hidden'); // Показываем блок с результатами
         }
 
-        // --- Функция отправки запроса на списание попытки ---
+		// --- Функция отправки запроса на списание попытки ---
         async function sendAttemptToServer() {
             const t = translations[currentLang];
             if (!userId) {
@@ -900,7 +902,14 @@ ${MY_CUSTOM_PROMPT ? `Additional instruction: "${MY_CUSTOM_PROMPT}".` : ''}
                 showCustomAlert(t.alert_backend_error); // Показываем общую ошибку
                 return false; // Не удалось отправить
             }
-             console.log(`Sending /use_attempt for user ${userId} to ${BACKEND_URL}`);
+            // --- НОВОЕ: Проверяем, что партнер определен ---
+            if (!currentPartner) {
+                console.error("Partner not found, cannot send attempt usage.");
+                showCustomAlert(t.alert_backend_error);
+                return false;
+            }
+
+             console.log(`Sending /use_attempt for user ${userId}, partner ${currentPartner} to ${BACKEND_URL}`);
             try {
                 const response = await fetch(`${BACKEND_URL}/use_attempt`, {
                     method: 'POST',
@@ -910,7 +919,8 @@ ${MY_CUSTOM_PROMPT ? `Additional instruction: "${MY_CUSTOM_PROMPT}".` : ''}
                         'ngrok-skip-browser-warning': 'true'
                         // ------------------------------------------
                     },
-                    body: JSON.stringify({ user_id: userId })
+                    // --- ИЗМЕНЕНИЕ: Добавляем 'partner' в тело запроса ---
+                    body: JSON.stringify({ user_id: userId, partner: currentPartner })
                 });
 
                 // --- ИЗМЕНЕНИЕ: Обрабатываем ответ сервера ---
@@ -1184,15 +1194,16 @@ ${MY_CUSTOM_PROMPT ? `Additional instruction: "${MY_CUSTOM_PROMPT}".` : ''}
         // ---------------------------------------------
 
 
-        // --- Функция загрузки начальных данных (попыток) ---
+// --- Функция загрузки начальных данных (попыток) ---
         async function loadInitialAttempts() { // Убрали параметр retry
              // --- ИЗМЕНЕНИЕ: Текст загрузки ставится ДО получения языка ---
              attemptsTextElement.textContent = translations[currentLang].attemptsTextLoading; // Показываем "Загрузка..."
              attemptsTextElement.classList.remove('attempts-error');
-             console.log(`Requesting attempts from ${BACKEND_URL} for user ${userId}`);
+             // --- ИЗМЕНЕНИЕ: Добавляем partner в URL запроса ---
+             console.log(`Requesting attempts from ${BACKEND_URL} for user ${userId}, partner ${currentPartner}`);
 
              try {
-                 const response = await fetch(`${BACKEND_URL}/get_attempts?user_id=${userId}`, {
+                 const response = await fetch(`${BACKEND_URL}/get_attempts?user_id=${userId}&partner=${currentPartner}`, {
                      method: 'GET',
                      cache: 'no-cache', // Добавим, чтобы избежать кэширования
                      // --- ИЗМЕНЕНИЕ: Добавляем заголовок для ngrok ---
@@ -1246,9 +1257,10 @@ ${MY_CUSTOM_PROMPT ? `Additional instruction: "${MY_CUSTOM_PROMPT}".` : ''}
         document.addEventListener('DOMContentLoaded', () => {
             tg.ready();
 
-            // Пытаемся получить user_id из параметров URL
+            // --- ИЗМЕНЕНИЕ: Получаем user_id и partner из параметров URL ---
             const urlParams = new URLSearchParams(window.location.search);
-            userId = urlParams.get('user_id'); // Ищем user_id=...
+            userId = urlParams.get('user_id');
+            currentPartner = urlParams.get('partner'); // Получаем имя партнера
 
              // Если не нашли user_id=, пытаемся получить из tg.initDataUnsafe (менее надежно)
             if (!userId && tg.initDataUnsafe && tg.initDataUnsafe.user) {
@@ -1256,12 +1268,13 @@ ${MY_CUSTOM_PROMPT ? `Additional instruction: "${MY_CUSTOM_PROMPT}".` : ''}
             }
 
             console.log("User ID:", userId);
+            console.log("Partner:", currentPartner); // Логируем партнера
 
             // --- ИЗМЕНЕНИЕ: Убрали setLanguage(currentLang) отсюда ---
             // Язык будет установлен ПОСЛЕ ответа от сервера в loadInitialAttempts()
 
-            // Если user_id найден, загружаем попытки
-            if (userId) {
+            // Если user_id и partner найдены, загружаем попытки
+            if (userId && currentPartner) {
                 // --- ИЗМЕНЕНИЕ: Сначала делаем "прогрев", потом загружаем попытки ---
                 pingBackend(); // Запускаем "прогрев" (не ждем завершения)
                 // Небольшая пауза перед основным запросом, чтобы дать "прогреву" время сработать
@@ -1270,7 +1283,7 @@ ${MY_CUSTOM_PROMPT ? `Additional instruction: "${MY_CUSTOM_PROMPT}".` : ''}
                 }, 150); // Увеличили немного паузу до 150 миллисекунд
                 // -------------------------------------------------------------
             } else {
-                console.error("User ID not found in URL or initDataUnsafe.");
+                console.error("User ID or Partner not found in URL or initDataUnsafe.");
                 attemptsLeft = -1; // Ставим ошибку
                 
                 // --- ИЗМЕНЕНИЕ: Устанавливаем язык (дефолтный) ---
